# Fraud_checker

./: Dockerfile  Makefile  README.md  flake8.tests.ini  pyproject.toml  setup.cfg  sonar-project.properties
fraud_checker/: __main__.py  logs.py  routes.py  settings.py  views.py
fraud_checker/config/: config.py
fraud_checker/fraud_model/: api.py
fraud_checker/serializers/: request.py  response.py
tests/: conftest.py  fixtures.py  test_log.py  test_view.py
