[tool.poetry]
name = "fraud_checker"
version = "0.0.0"
description = ""

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.901"
flake8 = "^3.9.2"
pytest = "^6.2.4"
wemake-python-styleguide = "^0.15.2"
autopep8 = "^1.5.7"
pytest-cov = "^2.12.1"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
